# tutorials

c_lang/: .gitignore  README.md
c_lang/greeting/: commands.md  main.cpp
c_lang/greeting_cmake/: CMakeLists.txt  commands.md  good_morning.cpp  hello.cpp
c_lang/greeting_real/: CMakeLists.txt  commands.md
c_lang/greeting_real/include/: good_morning.hpp
c_lang/greeting_real/src/: CMakeLists.txt
c_lang/greeting_real/test/: CMakeLists.txt
c_lang/hello/: commands.md  main.cpp
c_lang/hello_cmake/: CMakeLists.txt  commands.md
erlang/erlang_for_great_good/: .gitignore  README.md
erlang/erlang_for_great_good/lib/: linkmon.erl  mod.erl
erlang/erlang_for_great_good/script-log/: 2021-11-02.script  2021-11-04.script  2021-11-05.script  README.md
golang/surface/: functions.go  main  main.go  svg_renderer.go
nodejs/: arguments.js  bind.js  buffer.js  debug.js  error.js  event-emitter.js  global.js  global_vars.js  index.js  instanceof.js  letvar.js  moduleexports.js  number.js  package-lock.json  package.json  request.js  singleton-loader.js  singleton.js  spread.js  string.js  timer.js
nodejs/child-proc/: child.js  ipc.js  normal.js
rust/rust-tutorial/: Cargo.toml  README.md
rust/rust-tutorial/.github/workflows/: build.yml
rust/rust-tutorial/src/: calculator.rs  calculator_ref.rs  draw_functions.rs  guess_the_number.rs  main.rs  primitives.rs
